# calcium-client

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
libs/: jvm.lib
src/: dllmain.cpp
src/client/: client.cpp  client.hpp
src/client/hooks/: hooks.cpp  hooks.hpp
src/client/menu/: menu.cpp  menu.hpp
src/client/module/: module.cpp  module.hpp  moduleManager.cpp  moduleManager.hpp
src/client/module/modules/combat/: leftclicker.cpp  leftclicker.hpp  nohitdelay.cpp  nohitdelay.hpp
src/client/utils/: requestUtils.cpp  requestUtils.hpp  timerUtils.cpp  timerUtils.hpp
src/sdk/: sdk.cpp  sdk.hpp
src/sdk/client/: minecraft.cpp  minecraft.hpp
src/sdk/entity/: entity.cpp  entity.hpp
src/sdk/java/: list.cpp  list.hpp
src/sdk/world/: world.cpp  world.hpp
vendors/imgui/: Custom.cpp  Custom.hpp  imgui.h
vendors/imguihook/: imgui_hook.cpp  imgui_hook.h
vendors/kiero/: kiero.cpp
vendors/minhook/: hook.c
